<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/baseColor"
    tools:context=".ui.main.DashboardActivity">



    <androidx.appcompat.widget.LinearLayoutCompat
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <include
            layout="@layout/app_bar"
            android:layout_weight=".5"
            android:layout_width="match_parent"
            android:layout_height="0dp"/>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:orientation="vertical"
            android:layout_marginTop="50dp"
            android:paddingHorizontal="20dp">
            <TextView
                android:id="@+id/welcome_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/welcome"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:layout_marginBottom="10dp"
                android:textStyle="bold" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pleaseSelect"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:layout_marginBottom="70dp"/>
            <Button
                android:id="@+id/btn_stationary"
                android:backgroundTint="@color/altColor"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:drawableLeft="@drawable/ic_iconstationary"
                android:text="@string/stationary"/>
            <Button
                android:id="@+id/btn_mobile"
                android:backgroundTint="@color/altColor"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:drawableLeft="@drawable/ic_iconmobile"
                android:text="@string/mobile"/>
            <Button
                android:id="@+id/btn_area"
                android:backgroundTint="@color/altColor"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:drawableLeft="@drawable/ic_iconarea"
                android:text="@string/area"/>
        </androidx.appcompat.widget.LinearLayoutCompat>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/ic_wave"/>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header_main"
        app:menu="@menu/drawer_list" />




</androidx.drawerlayout.widget.DrawerLayout>